--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <img src="IMG_0266.jpg" alt = photo of Kelly Priest>
+  <img src="IMG_0266.jpg" width = "300px" alt = photo of Kelly Priest>
   <h2>Kelly Priest</h2>
   <h3>A bit about myself...</h3>
   <p>I am 24 years old....</p>
